[gd_scene load_steps=4 format=3 uid="uid://qxpiyog46lmf"]

[ext_resource type="Script" path="res://level_completed.gd" id="1_a41lw"]

[sub_resource type="Theme" id="Theme_yal1e"]

[sub_resource type="LabelSettings" id="LabelSettings_bb8cm"]
font_size = 8

[node name="LevelCompleted" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.14902)
script = ExtResource("1_a41lw")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
offset_left = 70.0
offset_top = 65.0
offset_right = 250.0
offset_bottom = 115.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_yal1e")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
label_settings = SubResource("LabelSettings_bb8cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Retry"

[node name="Next Level" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Next Level" to="." method="_on_next_level_pressed"]
